2011-08-12  Meteor Liu  <meteor1113@gmail.com>

	* init-toolbar.el (language-sub-menu): Add plsql-mode major-mode.

2011-08-11  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el (and): Fix auto-complete for ielm-mode.

2011-08-10  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (format-cxx-file): Remove warning for set-buffer.

2011-08-03  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (fboundp): Change cua-rectangle-mark-key to [C-M-return].

	* init-misc.el (sqlplus-mode-hook): Fix sqlplus.

2011-08-02  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (scroll-step): set scroll-step to 1.

	* init-misc.el (plsql-mode): Add plsql.el
	(sqlplus): Add sqlplus.el

	* init-basic.el (grep-dir-format): MinGW's grep support ''.

2011-08-01  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el (require): Bind Ctrl PageUp/PageDown to tabbar-backward/tabbar-forward.

	* init-basic.el ([C-next]): Bind Ctrl PageDown to next-buffer.
	([C-prior]): Bind Ctrl PageUp to previous-buffer.

	* sample/.dir-locals.el: Add.

2011-07-31  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (auto-mode-alist): Setup auto-mode-alist for hexl-mode.

	* init-toolbar.el (language-sub-menu): Add hexl-mode menu item.

	* init-basic.el (goto-match-paren): Setup goto-match-paren.
	(make-backup-files): Setup auto backup.

	* init-misc.el (undo-tree-mode): Setup undo-tree.

2011-07-30  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Setup for ielm.

2011-07-29  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (comment-column): Set comment-column default to 40.
	(grep-current-dir): grep-current-dir can support region.
	(grep-dir-format): Fix grep.

2011-07-28  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (mode-require-final-newline): Disable
	require-final-newline in text-mode.

2011-07-13  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el (magit-status): Add package magit.

2011-07-12  Meteor Liu  <meteor1113@gmail.com>
