@@ -1,5 +1,9 @@
 2011-08-12  Meteor Liu  <meteor1113@gmail.com>
 
+	* init-basic.el: Fix auto-mode-alist.
+
+	* init-misc.el (auto-mode-alist): Fix auto-mode-alist for plsql-mode.
+
 	* init-toolbar.el (language-sub-menu): Add plsql-mode major-mode.
 
 2011-08-11  Meteor Liu  <meteor1113@gmail.com>
